cmake_minimum_required(VERSION 3.18)
project(BuildAllLua)
set(BUILD_LUA_ALL ON)
set(LIB_SRC_PATH ${PROJECT_SOURCE_DIR}/..)
add_subdirectory(${LIB_SRC_PATH}/library LIBLUA)
add_subdirectory(${LIB_SRC_PATH}/lua build-lua)
target_link_libraries(lua54 PUBLIC llua54)
add_subdirectory(${LIB_SRC_PATH}/luac build-luac)
if(WIN32)
add_subdirectory(${LIB_SRC_PATH}/wlua build-wlua)
target_link_libraries(wlua54 PUBLIC llua54)
endif()