cmake_minimum_required(VERSION 3.18)
project(BuildAllLua)
set(SUBDIRLIBNAME "LIBLUA")
set(BUILD_LUA_ALL ON)
if(NOT LUA_VERSION AND NOT DISABLE_VERSION_POSTFIX)
    message(FATAL_ERROR "LUA_VERSION is not defined. Please specify it using -DLUA_VERSION=<version> (e.g., -DLUA_VERSION=54) or define -DDISABLE_VERSION_POSTFIX=ON to disable version-specific behavior.")
endif()
if(NOT LUA_BUILD_NAME)
    message(WARNING "LUA_BUILD_NAME is not defined. Using default value: 'lua'.")
    set(LUA_BUILD_NAME "lua")
endif()
set(LIB_SRC_PATH ${PROJECT_SOURCE_DIR}/..)
add_subdirectory(${LIB_SRC_PATH}/library ${SUBDIRLIBNAME})
add_subdirectory(${LIB_SRC_PATH}/lua build-lua)
target_link_libraries(${LUA_BUILD_NAME}${LUA_VERSION} PUBLIC lib${LUA_BUILD_NAME}${LUA_VERSION}_dynamic)
set(LibraryType _static)
if(LUAC_DYNAMIC_USE)
	set(LibraryType _dynamic)
endif()
add_subdirectory(${LIB_SRC_PATH}/luac build-luac)
target_link_libraries(${LUA_BUILD_NAME}c${LUA_VERSION} PUBLIC lib${LUA_BUILD_NAME}${LUA_VERSION}${LibraryType})
if(WIN32)
add_subdirectory(${LIB_SRC_PATH}/wlua build-wlua)
target_link_libraries(w${LUA_BUILD_NAME}${LUA_VERSION} PUBLIC lib${LUA_BUILD_NAME}${LUA_VERSION}_dynamic)
endif()