cmake_minimum_required(VERSION 3.18)
if(NOT LUA_VERSION AND NOT DISABLE_VERSION_POSTFIX)
    message(FATAL_ERROR "LUA_VERSION is not defined. Please specify it using -DLUA_VERSION=<version> (e.g., -DLUA_VERSION=54) or define -DDISABLE_VERSION_POSTFIX to disable version-specific behavior.")
endif()
if(NOT LUA_BUILD_NAME)
    message(WARNING "LUA_BUILD_NAME is not defined. Using default value: 'lua'.")
    set(LUA_BUILD_NAME "lua")
endif()
set(EXE_NAME "${LUA_BUILD_NAME}${LUA_VERSION}")
project(Lua)
if(NOT SUBDIRLIBNAME)
set(SUBDIRLIBNAME "LIBLUA")
endif()
if(NOT ANDROID AND NOT CMAKE_GENERATOR_PLATFORM AND NOT LUA_GENERATOR_PLATFORM)
	set(LUA_GENERATOR_PLATFORM ${CMAKE_SYSTEM_PROCESSOR})
elseif(MSVC AND CMAKE_GENERATOR_PLATFORM)
	set(LUA_GENERATOR_PLATFORM ${CMAKE_GENERATOR_PLATFORM})
elseif(ANDROID)
	set(LUA_GENERATOR_PLATFORM ${ANDROID_ABI})
endif()
set(LIB_SRC_PATH ${PROJECT_SOURCE_DIR}/..)
include_directories(${LIB_SRC_PATH} )
if(NOT BUILD_LUA_ALL)
add_subdirectory(${LIB_SRC_PATH}/library ${SUBDIRLIBNAME})
endif()
set(LUA_OUTPUT_DIR ${LIB_SRC_PATH}/../bin/${CMAKE_SYSTEM_NAME}/${LUA_GENERATOR_PLATFORM})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${LUA_OUTPUT_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${LUA_OUTPUT_DIR}")
if(MSVC)
file(GLOB ALL_RESOURCE_FILES ../lua.ico ../lua.rc)
message(STATUS "ALL_RESOURCE_FILES: ${ALL_RESOURCE_FILES}")
source_group("Resource" FILES ${ALL_RESOURCE_FILES})
endif()
file(GLOB_RECURSE HEADER_FILES ../*.h ../*.hpp ../*.inl)
set(SOURCE_FILES ../lua.c)
set(ALL_FILES ${HEADER_FILES} ${SOURCE_FILES})
add_executable(${EXE_NAME} ${HEADER_FILES} ${SOURCE_FILES} ${ALL_RESOURCE_FILES})
target_include_directories(${EXE_NAME} PUBLIC ${LIB_INCLUDE_PATH})
if(NOT BUILD_LUA_ALL)
target_link_libraries(${EXE_NAME} PUBLIC lib${LUA_BUILD_NAME}${LUA_VERSION}_dynamic)
endif()
if(UNIX AND NOT APPLE)
    add_definitions("-DLUA_USE_LINUX")
	if(LUA_USE_READLINE)
	if(ANDROID)
	set(TERMINAL_INFO tinfow)
	endif()
	target_link_libraries(${EXE_NAME} PUBLIC readline ${TERMINAL_INFO})
	target_compile_definitions(${EXE_NAME} PRIVATE LUA_USE_READLINE)
	endif()
endif()
if(NOT WIN32)
	target_link_libraries(${EXE_NAME} PUBLIC dl)
endif()
if(NOT MSVC)
target_link_libraries(${EXE_NAME} PUBLIC m)
endif()
