cmake_minimum_required(VERSION 3.18)
if(NOT LUA_VERSION AND NOT DISABLE_VERSION_POSTFIX)
    message(FATAL_ERROR "LUA_VERSION is not defined. Please specify it using -DLUA_VERSION=<version> (e.g., -DLUA_VERSION=54) or define -DDISABLE_VERSION_POSTFIX to disable version-specific behavior.")
endif()
if(NOT LUA_BUILD_NAME)
    message(WARNING "LUA_BUILD_NAME is not defined. Using default value: 'lua'.")
    set(LUA_BUILD_NAME "lua")
endif()
set(EXE_NAME "${LUA_BUILD_NAME}c${LUA_VERSION}")
project(LuaC)
if(NOT SUBDIRLIBNAME)
set(SUBDIRLIBNAME "LIBLUA")
endif()
if(NOT ANDROID AND NOT CMAKE_GENERATOR_PLATFORM AND NOT LUA_GENERATOR_PLATFORM)
	set(LUA_GENERATOR_PLATFORM ${CMAKE_SYSTEM_PROCESSOR})
elseif(MSVC AND CMAKE_GENERATOR_PLATFORM)
	set(LUA_GENERATOR_PLATFORM ${CMAKE_GENERATOR_PLATFORM})
elseif(ANDROID)
	set(LUA_GENERATOR_PLATFORM ${ANDROID_ABI})
endif()
set(LibraryType _static)
if(LUAC_DYNAMIC_USE)
	set(LibraryType _dynamic)
endif()
if(NOT BUILD_LUA_ALL)
add_subdirectory(${LIB_SRC_PATH}/library ${SUBDIRLIBNAME})
endif()
set(LIB_SRC_PATH ${PROJECT_SOURCE_DIR}/..)
include_directories(${LIB_SRC_PATH} )
set(LUA_OUTPUT_DIR ${LIB_SRC_PATH}/../bin/${CMAKE_SYSTEM_NAME}/${LUA_GENERATOR_PLATFORM})
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${LUA_OUTPUT_DIR}")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${LUA_OUTPUT_DIR}")
if(MSVC)
file(GLOB ALL_RESOURCE_FILES ../lua.ico ../lua.rc)
message(STATUS "ALL_RESOURCE_FILES: ${ALL_RESOURCE_FILES}")
source_group("Resource" FILES ${ALL_RESOURCE_FILES})
endif()
file(GLOB_RECURSE HEADER_FILES ../*.h ../*.hpp ../*.inl)
set(SOURCE_FILES ../luac.c)
if(LUAC_DYNAMIC_USE)
	list(APPEND SOURCE_FILES ../lopcodes.c)
endif()
set(ALL_FILES ${HEADER_FILES} ${SOURCE_FILES})
add_executable(${EXE_NAME} ${HEADER_FILES} ${SOURCE_FILES} ${ALL_RESOURCE_FILES})
target_include_directories(${EXE_NAME} PUBLIC ${LIB_INCLUDE_PATH})
if(NOT BUILD_LUA_ALL)
target_link_libraries(${EXE_NAME} PUBLIC liblua${LUA_VERSION}${LibraryType})
endif()
if(UNIX AND NOT APPLE)
    add_definitions("-DLUA_USE_LINUX")
endif()
if(NOT WIN32)
	target_link_libraries(${EXE_NAME} PUBLIC dl)
endif()
if(NOT MSVC)
target_link_libraries(${EXE_NAME} PUBLIC m)
endif()
